# turkce-dil-analizi

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements.txt
.claude/: launch.json
docs/: bilinen-sinirlar.md  mimari-seamler.md  sorun-giderme.md
eval/: compare_parallel.py  genis_kapsamli_test.txt  golden.jsonl  gruplama_test.txt  kesme_test.txt  manual_ocr_test.docx  manual_ocr_test.txt  run_eval.py  tdk_kelime_taslagi.md  test_belge_altin.txt  test_belge_altin_cevap.md
src/dilanaliz/: __init__.py  analyzer.py  cache.py  chunk.py  config.py  extract.py  locate.py  postprocess.py  progress.py  prompt.py  schema.py  spell.py
src/dilanaliz/providers/: __init__.py  base.py  gemini.py
src/dilanaliz/rules/: __init__.py  base.py  rules.md  static.py
tests/: test_analyzer.py  test_cache.py  test_chunk.py  test_extract.py  test_locate.py  test_parallel_equivalence.py  test_postprocess.py  test_progress.py  test_rules.py  test_run_eval.py  test_schema.py  test_spell.py  test_web.py
web/: index.html  server.py
