[project]
name = "dilanaliz"
version = "0.1.0"
description = "Türkçe doküman dil analizi sistemi — Faz 1 (prompt-first çekirdek)"
requires-python = ">=3.11"

# Modüler + pinli LangChain: meta 'langchain' paketi DEĞİL.
# Kapalı ağa (air-gap) mirror/vendor edilebilsin diye sürümler sabit aralıkta.
dependencies = [
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "pydantic>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
    # Deterministik imla: Hunspell'in saf-Python portu (Java/JVM gerektirmez).
    # tr_TR sözlüğü (dicts/tr_TR.{aff,dic}) ayrıca bulundurulur (air-gap: vendor'la).
    "spylls>=0.1.7,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dilanaliz"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
